<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/eventTitle"
                android:hint="@string/create_event_title_placeholder"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="text"
                android:autofillHints="Take Pill" />
            <EditText
                android:id="@+id/eventDescription"
                android:hint="@string/create_event_description_placeholder"
                android:layout_width="match_parent"
                android:layout_below="@+id/eventTitle"
                android:layout_alignParentStart="true"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="text"
                android:autofillHints="Reminder"
                />
            <TextView
                android:id="@+id/eventStartDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventDescription"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="@string/create_event_start_date_label"
                android:textSize="18dp"
                android:textFontWeight="700"
                />
            <DatePicker
                android:id="@+id/eventStartDate"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventStartDateLabel"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/eventEndDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventStartDate"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="@string/create_event_end_date_label"
                android:textSize="18dp"
                android:textFontWeight="700"
                />
            <DatePicker
                android:id="@+id/eventEndDate"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventEndDateLabel"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/eventTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventEndDate"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="@string/create_event_time_label"
                android:textSize="18dp"
                android:textFontWeight="700"
                />
            <TimePicker
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventTimeLabel"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>